# evmLab3

./: CMakeLists.txt  camera.cpp  libUSB.cpp
libusb-1.0/: libusb.h
